--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.AndroidPractice" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.FoodWikipedia.Light" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -11,19 +11,23 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-        <item name="materialButtonStyle">@style/GlobalButtonStyle</item>
-        <item name="android:textViewStyle">@style/GlobalTextViewStyle</item>
+        <item name="materialButtonStyle">@style/GlobalButtonStyle.Light</item>
+        <item name="android:textViewStyle">@style/GlobalTextViewStyle.Light</item>
+
+        <item name="android:windowFullscreen">true</item>
     </style>
 
-    <style name="GlobalButtonStyle" parent="Widget.MaterialComponents.Button">
-        <item name="android:backgroundTint">@color/black</item>
-    </style>
-
-    <style name="GlobalTextViewStyle" parent="Widget.MaterialComponents.TextView">
+    <style name="GlobalButtonStyle.Light" parent="Widget.MaterialComponents.Button">
+        <item name="android:backgroundTint">@color/white</item>
         <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="GlobalTextViewStyle.Light" parent="Widget.MaterialComponents.TextView">
+        <item name="android:textColor">@color/white</item>
         <item name="android:textSize">22sp</item>
         <item name="android:textStyle">bold</item>
     </style>
+
 </resources>
