--- a/app/src/main/res/layout/about_fragment.xml
+++ b/app/src/main/res/layout/about_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/about"
@@ -10,44 +10,77 @@
     android:orientation="vertical"
     tools:context=".About" >
 
+    <include layout="@layout/actionbar_light_theme"
+        android:id="@+id/includedActionBar"/>
 
     <TextView
         android:id="@+id/applicationName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        android:layout_marginStart="32dp"
-        android:text="@string/about_app_name" />
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="166dp"
+        android:layout_marginBottom="6dp"
+        android:text="@string/about_app_name"
+        app:layout_constraintBottom_toTopOf="@+id/versionCode"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/versionCode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        android:layout_marginStart="32dp"
-        android:text="@string/about_version_code" />
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="6dp"
+        android:text="@string/about_version_code"
+        app:layout_constraintBottom_toTopOf="@+id/githubLink"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
     <TextView
         android:id="@+id/githubLink"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="24dp"
+        android:layout_marginEnd="24dp"
         android:autoLink="web"
         android:linksClickable="true"
+        android:text="@string/github_link"
         android:textColorLink="@color/purple_700"
-        android:text="@string/github_link" />
-
+        app:layout_constraintBottom_toTopOf="@+id/sendFeedbackButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/sendFeedbackButton"
         android:layout_width="200dp"
         android:layout_height="52dp"
-        android:layout_marginTop="24dp"
-        android:text="@string/send_feedback" />
+        android:layout_marginBottom="304dp"
+        android:text="@string/send_feedback"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/thanksToView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="12dp"
+        android:text="@string/thanks_to_label"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
