--- a/app/src/main/res/layout/header_fragment.xml
+++ b/app/src/main/res/layout/header_fragment.xml
@@ -9,6 +9,8 @@
     tools:context=".Header"
     tools:ignore="contentDescription">
 
+    <include layout="@layout/actionbar_light_theme"
+        android:id="@+id/includedActionBar"/>
 
     <TextView
         android:id="@+id/mainLabel"
@@ -22,21 +24,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.2" />
-
-
-    <ImageButton
-        android:id="@+id/settingsImageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="33dp"
-        android:background="@color/background_color"
-        android:contentDescription="@string/settings_label"
-        android:src="@drawable/ic_baseline_settings_light_24"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/aboutButton" />
 
     <Button
         android:id="@+id/launchCategoryButton"
@@ -73,10 +60,10 @@
         android:id="@+id/imageView"
         android:layout_width="350dp"
         android:layout_height="300dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="32dp"
         android:src="@drawable/basket"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pickCategoryButton" />
 
