--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="background_color">#31D468</color>
+    <color name="transparent_color">#00000000</color>
 </resources>
