--- a/app/src/main/res/layout/actionbar_dark_theme.xml
+++ b/app/src/main/res/layout/actionbar_dark_theme.xml
@@ -37,12 +37,20 @@
 
         <ImageButton
             android:id="@+id/toSettingsImageButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:background="@color/transparent_color"
             android:contentDescription="settings" />
+
+        <ImageView
+            android:id="@+id/icon_image"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:background="@color/transparent_color"/>
 
     </RelativeLayout>
 
