--- a/app/src/main/res/layout/actionbar_light_theme.xml
+++ b/app/src/main/res/layout/actionbar_light_theme.xml
@@ -40,8 +40,15 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:background="@color/transparent_color"
-            android:contentDescription="settings" />
+            android:background="@color/transparent_color"/>
+
+        <ImageView
+            android:id="@+id/icon_image"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:background="@color/transparent_color"/>
 
     </RelativeLayout>
 
