--- a/app/src/main/res/layout/custom_languages_spinner.xml
+++ b/app/src/main/res/layout/custom_languages_spinner.xml
@@ -19,10 +19,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="12dp"
         android:text="@string/english_language"
-        android:textColor="@color/white"
-        android:textSize="24sp"/>
+        android:textColor="@color/black"
+        android:textSize="22sp"/>
 
 
 </LinearLayout>
