--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -31,12 +31,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
-        android:layout_marginTop="140dp"
         android:thumb="@drawable/thumb"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintStart_toEndOf="@+id/musicState"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/musicState"
+        app:layout_constraintBottom_toBottomOf="@+id/musicState"
         app:track="@drawable/track"/>
 
     <TextView
@@ -47,9 +47,7 @@
         android:text="@string/theme_label"
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/languageState"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.09"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/musicState"
         tools:ignore="TextContrastCheck,TextContrastCheck" />
 
     <RadioGroup
@@ -57,10 +55,10 @@
         android:layout_width="wrap_content"
         android:layout_height="28dp"
         android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="@+id/themeState"
+        app:layout_constraintBottom_toBottomOf="@+id/themeState"
+        android:layout_marginTop="5dp"
         app:layout_constraintEnd_toEndOf="@id/musicOnOfSwitch"
-        android:layout_marginTop="22dp"
-        android:layout_marginStart="90dp"
-        app:layout_constraintStart_toEndOf="@+id/themeState"
         app:layout_constraintTop_toBottomOf="@+id/musicOnOfSwitch">
 
         <RadioButton
@@ -99,21 +97,19 @@
         android:text="@string/language_label"
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/confirmSettingsButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.11"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/themeState"
         tools:ignore="TextContrastCheck" />
 
     <Spinner
         android:id="@+id/languageSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="132dp"
-        android:layout_marginTop="52dp"
-        app:layout_constraintEnd_toEndOf="@+id/themeRadioGroup"
-        app:layout_constraintHorizontal_bias="0.555"
+        app:layout_constraintTop_toTopOf="@+id/languageState"
+        app:layout_constraintBottom_toBottomOf="@id/languageState"
+        android:layout_marginTop="5dp"
         app:layout_constraintStart_toEndOf="@+id/languageState"
-        app:layout_constraintTop_toTopOf="@id/themeRadioGroup" />
+        app:layout_constraintStart_toStartOf="@+id/themeRadioGroup"
+        android:layout_marginStart="-5dp"/>
 
     <Button
         android:id="@+id/confirmSettingsButton"
