--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.FoodWikipedia.Light" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.FoodWikipedia.Light" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -17,6 +17,7 @@
         <item name="android:textViewStyle">@style/GlobalTextViewStyle.Light</item>
 
         <item name="android:windowFullscreen">true</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
     </style>
 
     <style name="GlobalButtonStyle.Light" parent="Widget.MaterialComponents.Button">
