--- a/app/src/main/res/layout/category_fragment.xml
+++ b/app/src/main/res/layout/category_fragment.xml
@@ -8,10 +8,7 @@
 
     <include
         android:id="@+id/includedActionBar"
-        layout="@layout/actionbar_light_theme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        layout="@layout/actionbar_light_theme"/>
 
     <TextView
         android:id="@+id/category_name"
@@ -24,17 +21,15 @@
         app:layout_constraintBottom_toTopOf="@id/category_description"
         app:layout_constraintTop_toBottomOf="@id/includedActionBar"
         android:layout_marginBottom="4dp"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="12dp"/>
 
     <TextView
         android:id="@+id/category_description"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginEnd="102dp"
-        android:gravity="start"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.12"
         app:layout_constraintStart_toStartOf="@id/category_name"
         android:textStyle="normal"
         app:layout_constraintTop_toBottomOf="@id/category_name"
@@ -57,22 +52,21 @@
         android:id="@+id/main_representations"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
         android:textStyle="normal"
         app:layout_constraintStart_toStartOf="@id/mainRepresentationsTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mainRepresentationsTextView"
-        android:layout_marginStart="18dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         android:text="" />
 
 
     <TextView
-        android:id="@+id/pickFruitTextView"
+        android:id="@+id/pickItemTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
-        android:text="@string/pick_any_fruit_label"
+        android:layout_marginTop="48dp"
+        android:text="@string/pick_any_item_label"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,12 +75,11 @@
     <Button
         android:layout_width="125dp"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="@+id/pickFruitTextView"
-        app:layout_constraintStart_toStartOf="@+id/pickFruitTextView"
-        app:layout_constraintTop_toBottomOf="@+id/pickFruitTextView"
+        app:layout_constraintEnd_toEndOf="@+id/pickItemTextView"
+        app:layout_constraintStart_toStartOf="@+id/pickItemTextView"
+        app:layout_constraintTop_toBottomOf="@+id/pickItemTextView"
         android:layout_marginTop="12dp"
         android:text="@string/pick_label"/>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
