--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.FoodWikipedia.Night" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.FoodWikipedia.Night" parent="ThemeOverlay.MaterialComponents.Dark">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -16,6 +16,7 @@
         <item name="android:textViewStyle">@style/GlobalTextViewStyle.Night</item>
 
         <item name="android:windowFullscreen">true</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
     </style>
 
 
