created successful mechanism to get json strings

--- a/app/src/main/res/layout/about_fragment.xml
+++ b/app/src/main/res/layout/about_fragment.xml
@@ -8,7 +8,7 @@
     android:background="@color/background_color"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".About" >
+    tools:context=".screen.About" >
 
     <include layout="@layout/actionbar_light_theme"
         android:id="@+id/includedActionBar"/>
