--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -114,6 +114,7 @@
     <Button
         android:id="@+id/confirmSettingsButton"
         android:layout_width="150dp"
+        android:visibility="invisible"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/confirm_button_label"
