theme option (light/dark) implemented

--- a/app/src/main/res/layout/about_fragment.xml
+++ b/app/src/main/res/layout/about_fragment.xml
@@ -10,7 +10,7 @@
     android:orientation="vertical"
     tools:context=".screen.About" >
 
-    <include layout="@layout/actionbar_light_theme"
+    <include layout="@layout/actionbar"
         android:id="@+id/includedActionBar"/>
 
     <TextView
