--- a/app/src/main/res/layout/category_fragment.xml
+++ b/app/src/main/res/layout/category_fragment.xml
@@ -8,7 +8,7 @@
 
     <include
         android:id="@+id/includedActionBar"
-        layout="@layout/actionbar_light_theme"/>
+        layout="@layout/actionbar"/>
 
     <TextView
         android:id="@+id/category_name"
