--- a/app/src/main/res/layout/header_fragment.xml
+++ b/app/src/main/res/layout/header_fragment.xml
@@ -9,7 +9,7 @@
     tools:context=".screen.Header"
     tools:ignore="contentDescription">
 
-    <include layout="@layout/actionbar_light_theme"
+    <include layout="@layout/actionbar"
         android:id="@+id/includedActionBar"/>
 
     <TextView
