--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical"
     tools:context=".screen.Settings">
 
-    <include layout="@layout/actionbar_light_theme"
+    <include layout="@layout/actionbar"
         android:id="@+id/includedActionBar"/>
 
     <TextView
