--- a/app/src/main/res/layout/category_item_fragment.xml
+++ b/app/src/main/res/layout/category_item_fragment.xml
@@ -18,7 +18,7 @@
 
         <include
             android:id="@+id/includedActionBar"
-            layout="@layout/actionbar_light_theme"
+            layout="@layout/actionbar"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"/>
 
