--- a/app/src/main/res/layout/custom_languages_spinner.xml
+++ b/app/src/main/res/layout/custom_languages_spinner.xml
@@ -4,7 +4,7 @@
     android:layout_width="175dp"
     android:layout_height="wrap_content"
     android:padding="6dp"
-    android:background="@color/transparent_color"
+    android:background="@color/background_color"
     tools:ignore="UseCompoundDrawables">
 
     <ImageView
