--- a/app/src/main/res/layout/fragment_container.xml
+++ b/app/src/main/res/layout/fragment_container.xml
@@ -7,4 +7,4 @@
     android:layout_height="match_parent"
     android:background="@color/background_color"
     android:id="@+id/fragmentContainer"
-    tools:context=".FragmentContainer"/>
+    tools:context=".ui.FragmentContainer"/>
