--- a/app/src/main/res/layout/category_fragment.xml
+++ b/app/src/main/res/layout/category_fragment.xml
@@ -17,11 +17,10 @@
         android:textSize="42sp"
         tools:text="Fruits"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="14dp"
         app:layout_constraintBottom_toTopOf="@id/category_description"
         app:layout_constraintTop_toBottomOf="@id/includedActionBar"
-        android:layout_marginBottom="4dp"
-        android:layout_marginTop="12dp"/>
+        android:layout_marginBottom="4dp" />
 
     <TextView
         android:id="@+id/category_description"
@@ -40,7 +39,7 @@
         android:id="@+id/mainRepresentationsTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="20dp"
         android:text="@string/main_representatives_label"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +64,7 @@
         android:id="@+id/pickItemTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="20dp"
         android:text="@string/pick_any_item_label"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
