--- a/app/src/main/res/layout-normal/category_item_fragment.xml
+++ b/app/src/main/res/layout-normal/category_item_fragment.xml
@@ -13,7 +13,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:context=".ui.CategoryItemScreen">
+        tools:context=".ui.screen.CategoryItemScreen">
 
 
         <include
