--- a/app/src/main/res/layout/header_fragment.xml
+++ b/app/src/main/res/layout/header_fragment.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/background_color"
     android:id="@+id/header"
-    tools:context=".ui.Header"
+    tools:context=".ui.screen.Header"
     tools:ignore="contentDescription">
 
     <include layout="@layout/actionbar"
